--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: '3.9'
       
       - name: Install dependencies
         run: |
@@ -28,4 +28,8 @@ jobs:
       - name: Run tests
         run: |
           pytest
+          
+      - name: Build project 
+        run: |
+          python setup.py sdlist bdlist_wheel
 
